docker with linux binary ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 .vscode/
-operator/logs/
 
-# Inside the simulator folder the compiled version of the UE4Project will be placed which shouldn't be committed.
-simulator/
-!simulator/readme.md
+/docker/fsds-v2.0.0-linux/
 
 # compiled mkdocs html
 site
