--- a/docker/Dockerfile.linux
+++ b/docker/Dockerfile.linux
@@ -47,15 +47,19 @@ RUN VULKAN_API_VERSION=`dpkg -s libvulkan1 | grep -oP 'Version: [0-9|\.]+' | gre
         }\
     }" > /etc/vulkan/icd.d/nvidia_icd.json
 
-# create a user
-RUN useradd \
-        -r \
-        -m \
-        -d /home/fsds/ \
-        fsds
 
-USER fsds
-WORKDIR /home/fsds
+ARG USERNAME
+ARG HOST_UID
+# create user
+RUN useradd \
+    -r \
+    -m \
+    -d /home/${USERNAME}/ \
+    -u ${HOST_UID} \
+    ${USERNAME}
+
+USER ${USERNAME}
+WORKDIR /home/${USERNAME}
 
 # download fsds binary
 RUN wget https://github.com/FS-Driverless/Formula-Student-Driverless-Simulator/releases/download/v2.1.0/fsds-v2.1.0-linux.zip && \
