updated rviz, package, fixed IP var

--- a/ros2/src/fsds_ros2_bridge/package.xml
+++ b/ros2/src/fsds_ros2_bridge/package.xml
@@ -1,40 +1,39 @@
 <?xml version="1.0"?>
 <package format="3">
-  <name>fsds_ros2_bridge</name>
-  <version>0.0.1</version>
-  <description>FSDS ROS2 bridge connecting 1 autonomous system to the simulated world</description>
+    <name>fsds_ros2_bridge</name>
+    <version>0.0.1</version>
+    <description>Forked from FSDS ROS2 bridge</description>
 
-  <maintainer email="autonomy@fsteamdelft.nl">David Oort Alonso</maintainer>
+    <maintainer email="team@qutmotorsport.com">Alastair Bradford</maintainer>
 
-  <license>GPLv2</license>
+    <license>MIT</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+    <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <!-- <build_depend>nodelet</build_depend> -->
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>image_transport</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>rclcpp</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>fs_msgs</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>tf2</build_depend>
-  <build_depend>tf2_ros</build_depend>
-  <build_depend>cv_bridge</build_depend>
+    <build_depend>geometry_msgs</build_depend>
+    <build_depend>image_transport</build_depend>
+    <build_depend>nav_msgs</build_depend>
+    <build_depend>rclcpp</build_depend>
+    <build_depend>sensor_msgs</build_depend>
+    <build_depend>fs_msgs</build_depend>
+    <build_depend>std_msgs</build_depend>
+    <build_depend>tf2</build_depend>
+    <build_depend>tf2_ros</build_depend>
+    <build_depend>cv_bridge</build_depend>
 
-  <!-- <exec_depend>nodelet</exec_depend> -->
-  <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>image_transport</exec_depend>
-  <exec_depend>nav_msgs</exec_depend>
-  <exec_depend>rclcpp</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
+    <exec_depend>geometry_msgs</exec_depend>
+    <exec_depend>image_transport</exec_depend>
+    <exec_depend>nav_msgs</exec_depend>
+    <exec_depend>rclcpp</exec_depend>
+    <exec_depend>sensor_msgs</exec_depend>
+    <exec_depend>std_msgs</exec_depend>
 
-  <!--   <export>
-    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
-  </export>
- -->
-  <export>
-    <build_type>ament_cmake</build_type>
-  </export>
+    <!-- Dependencies covered in QUTMS Driverless Conda environment -->
+    <!-- Custom package requirement -->
+    <!-- <depend>fs_msgs</depend> -->
+    <depend>fsds_transforms</depend>
+
+    <export>
+        <build_type>ament_cmake</build_type>
+    </export>
 </package>
