somehow these files weren't in the last commit? wtf

--- a/ros2/src/fsds_ros2_bridge/package.xml
+++ b/ros2/src/fsds_ros2_bridge/package.xml
@@ -32,6 +32,7 @@
     <!-- Custom package requirement -->
     <!-- <depend>fs_msgs</depend> -->
     <depend>fsds_transforms</depend>
+    <depend>fsds_visuals</depend>
 
     <export>
         <build_type>ament_cmake</build_type>
