--- a/ros2/src/fsds_ros2_bridge/package.xml
+++ b/ros2/src/fsds_ros2_bridge/package.xml
@@ -6,7 +6,7 @@
 
     <maintainer email="team@qutmotorsport.com">Alastair Bradford</maintainer>
 
-    <license>MIT</license>
+    <license>GPLv2</license>
 
     <buildtool_depend>ament_cmake</buildtool_depend>
 
