--- a/ros2/src/fsds_transforms/package.xml
+++ b/ros2/src/fsds_transforms/package.xml
@@ -5,7 +5,7 @@
     <version>0.0.0</version>
     <description>TF2 package to handle TF trees in FSDS</description>
     <maintainer email="team@qutmotorsport.com">Alastair Bradford</maintainer>
-    <license>MIT</license>
+    <license>GPLv2</license>
 
     <export>
         <build_type>ament_python</build_type>
