--- a/ros2/src/launch_rviz/package.xml
+++ b/ros2/src/launch_rviz/package.xml
@@ -5,7 +5,7 @@
     <version>0.0.0</version>
     <description>Used for launching rviz window + robot model</description>
     <maintainer email="team@qutmotorsport.com">Alastair Bradford</maintainer>
-    <license>MIT</license>
+    <license>GPLv2</license>
 
     <buildtool_depend>ament_cmake</buildtool_depend>
     <exec_depend>joint_state_publisher</exec_depend>
