--- a/UE4Project/Config/DefaultEngine.ini
+++ b/UE4Project/Config/DefaultEngine.ini
@@ -104,3 +104,8 @@ CompressionQualityModifier=0.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
 
+
+
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
+
