--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "ros/src/fs_msgs"]
 	path = ros/src/fs_msgs
 	url = https://github.com/FS-Driverless/fs_msgs.git
-[submodule "AirSim/AirLib/external/rpclib"]
-	path = AirSim/AirLib/external/rpclib
+[submodule "AirSim/external/rpclib"]
+	path = AirSim/external/rpclib
 	url = https://github.com/rpclib/rpclib.git
 [submodule "ros2/src/fs_msgs"]
 	path = ros2/src/fs_msgs
