fixing this for working

--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,7 @@
     "ClockSpeed": 1.0,
     "SpectatorServerPassword": "password",
     "PawnPaths": {
-        "DefaultCar": { "PawnBP": "Class'/AirSim/VehicleAdv/Cars/QEV3/QEV3Pawn.QEV3Pawn_C'" }
+        "DefaultCar": { "PawnBP": "Class'/AirSim/VehicleAdv/Cars/TechnionCar/TechnionCarPawn.TechnionCarPawn_C'" }
     },
     "Vehicles": {
         "FSCar": {
