--- a/ros/src/fsds_ros_bridge/CMakeLists.txt
+++ b/ros/src/fsds_ros_bridge/CMakeLists.txt
@@ -92,3 +92,6 @@ install(DIRECTORY
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
   # PATTERN ".git" EXCLUDE
 )
+
+catkin_install_python(PROGRAMS scripts/cameralauncher.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
