nvidia updated their cuda repo keys

--- a/docker/Dockerfile.fsds
+++ b/docker/Dockerfile.fsds
@@ -3,6 +3,8 @@
 ARG BASE_IMAGE=nvidia/vulkan:1.1.121-cuda-10.1-beta.1-ubuntu18.04
 FROM ${BASE_IMAGE}
 
+# nvidia updated their cuda repo keys
+RUN apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         python3 \
